--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <div id="app">
       <div id="chat_container"></div>
       <form action="">
-        <textarea name="promt" id="" cols="1" rows="1" placeholder="Ask Codex..."></textarea>
+        <textarea name="prompt" id="" cols="1" rows="1" placeholder="Ask Codex..."></textarea>
         <button type="submit"><img src="assets/send.svg" alt="send"></button>
       </form>
     </div>
